--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -6,10 +6,14 @@ api_key = "sk-..."
 max_tokens = 4096
 temperature = 0.0
 
+# chrome path
+
+chrome_instance_path = "C:/Program Files/Google/Chrome/Application/chrome.exe"
+
 # [llm] #AZURE OPENAI:
 # api_type= 'azure'
 # model = "YOUR_MODEL_NAME" #"gpt-4o-mini"
-# base_url = "{YOUR_AZURE_ENDPOINT.rstrip('/')}/openai/deployments/{AZURE_DEPOLYMENT_ID}"  
+# base_url = "{YOUR_AZURE_ENDPOINT.rstrip('/')}/openai/deployments/{AZURE_DEPOLYMENT_ID}"
 # api_key = "AZURE API KEY"
 # max_tokens = 8096
 # temperature = 0.0
