feat: Supports gemini

--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -20,3 +20,9 @@ temperature = 0.0
 model = "claude-3-5-sonnet"
 base_url = "https://api.openai.com/v1"
 api_key = "sk-..."
+
+
+#[llm] google gemini
+#model = "gemini-1.5-flash"
+#base_url = "https://generativelanguage.googleapis.com/v1"
+#api_key = "sk-..."
