--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -1,9 +1,16 @@
 # Global LLM configuration
+# [llm]
+# model = "claude-3-5-sonnet"
+# base_url = "https://api.openai.com/v1"
+# api_key = "sk-..."
+# max_tokens = 4096
+# temperature = 0.0
+
 [llm]
-model = "claude-3-5-sonnet"
-base_url = "https://api.openai.com/v1"
-api_key = "sk-..."
-max_tokens = 4096
+model = "gemini-2.0-flash"
+base_url = "https://generativelanguage.googleapis.com"
+api_key = "AIzaSyCWWuTe1Wr351h-8HkOx04tnbSARq4m--w"
+max_tokens = 8192
 temperature = 0.0
 
 # [llm] #AZURE OPENAI:
