feat(config): add brave search tool configuration
- Add brave_search tool configuration section
- Include api_key placeholder in example config

--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -45,6 +45,10 @@ name="google_search"
 [tool.tools.baidu_search]
 name="baidu_search"
 
+[tool.tools.brave_search]
+name="brave_search"
+config = { api_key = "your brave search api key" }
+
 [tool.tools.browser_use_tool]
 name="browser_use_tool"
 
