--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -8,7 +8,7 @@
 
 [llm]
 model = "gemini-2.0-flash"
-base_url = "https://generativelanguage.googleapis.com"
+base_url = "https://generativelanguage.googleapis.com/v1beta"
 api_key = "AIzaSyCWWuTe1Wr351h-8HkOx04tnbSARq4m--w"
 max_tokens = 8192
 temperature = 0.0
