--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -1,6 +1,6 @@
 # Global LLM configuration
 [llm]
-model = "claude-3-5-sonnet"
+model = "gpt-4o"
 base_url = "https://api.openai.com/v1"
 api_key = "sk-..."
 max_tokens = 4096
@@ -17,6 +17,6 @@ temperature = 0.0
 
 # Optional configuration for specific LLM models
 [llm.vision]
-model = "claude-3-5-sonnet"
+model = "gpt-4o"
 base_url = "https://api.openai.com/v1"
 api_key = "sk-..."
