feat: 添加 本地SearxNG 搜索引擎支持，并更新相关配置，当不配置时，默认使用原规则

--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -44,6 +44,13 @@ api_key = "sk-..."
 # password = "proxy-password"
 
 # Optional configuration, Search settings.
-# [search]
-# Search engine for agent to use. Default is "Google", can be set to "Baidu" or "DuckDuckGo".
+#[search]
+# Search engine for agent to use. Default is "Google", can be set to "Baidu", "DuckDuckGo" or "Searxng".
 #engine = "Google"
+
+# SearxNG setting.
+[search.searxng]
+# SearxNG instance address, can use public instance or local instance
+#base_url = "http://127.0.0.1:prot"
+# Number of search results
+#num_results = 5
