--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -49,3 +49,9 @@ temperature = 0.0     # Controls randomness for vision model
 # [search]
 # Search engine for agent to use. Default is "Google", can be set to "Baidu" or "DuckDuckGo".
 #engine = "Google"
+
+[llm.default]
+# Existing config options...
+enabled = false
+ttl = 86400  # Cache time-to-live in seconds (24 hours)
+cache_dir = "cache"  # Path can be relative to project root or absolute
