--- a/.github/workflows/pre-commit.yaml
+++ b/.github/workflows/pre-commit.yaml
@@ -22,5 +22,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pre-commit black==23.1.0 isort==5.12.0 autoflake==2.0.1
+      - name: Prepare config file
+        run: |
+          cp config/config.example.toml config/config.toml
       - name: Run pre-commit hooks
         run: pre-commit run --all-files
