feat: Add example configuration for GEMINI model in config.example.toml

--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -23,6 +23,13 @@ temperature = 0.0                          # Controls randomness
 # temperature = 0.0
 # api_version="AZURE API VERSION" #"2024-08-01-preview"
 
+# [llm] #GEMINI:
+# model = "gemini-2.0-flash"
+# base_url = "https://generativelanguage.googleapis.com/v1beta/openai/"
+# api_key = "GEMINI API KEY"
+# max_tokens = 8192
+# temperature = 0.0
+
 # [llm] #OLLAMA:
 # api_type = 'ollama'
 # model = "llama3.2"
