--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,8 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+      - id: requirements-txt-fixer
+      - id: debug-statements
 
   - repo: https://github.com/PyCQA/autoflake
     rev: v2.0.1
@@ -37,3 +39,15 @@ repos:
           "--filter-files",
           "--lines-after-imports=2",
         ]
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.7.1
+    hooks:
+      - id: mypy
+        args: [
+          "--ignore-missing-imports",
+          "--disallow-untyped-defs",
+          "--strict",
+        ]
+        additional_dependencies:
+          - "pydantic[mypy]"
