--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,8 +11,6 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-      - id: requirements-txt-fixer
-      - id: debug-statements
 
   - repo: https://github.com/PyCQA/autoflake
     rev: v2.0.1
@@ -45,9 +43,10 @@ repos:
     hooks:
       - id: mypy
         args: [
-          "--ignore-missing-imports",
-          "--disallow-untyped-defs",
-          "--strict",
+            "--ignore-missing-imports",
+            "--check-untyped-defs",
+            "--follow-imports=skip",
+            "--warn-unused-ignores",
         ]
         additional_dependencies:
           - "pydantic[mypy]"
